# go_motor_ros

./: CMakeLists.txt  README.md  package.xml
cfg/: MotorParams.cfg
config/: default_params.yaml  rosconsole.conf
launch/: go_motor_ros.launch
src/: go_motor_ros_node.cpp
