<?xml version="1.0"?>
<package format="2">
  <name>go_motor_ros</name>
  <version>0.1.0</version>
  <description>ROS package for controlling Unitree GO motors with dynamic reconfigure and parameter tuning</description>

  <maintainer email="yusaku_nakajima@ap.eng.osaka-u.ac.jp">Yusaku Nakajima</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

<!--   <build_depend>libstdc++</build_depend>
  <exec_depend>libstdc++</exec_depend> -->
  
  <!-- System dependencies for serial communication -->
<!--   <build_depend>libpthread-dev</build_depend>
  <exec_depend>libpthread-dev</exec_depend> -->

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
